Windows fix for ImageViewer